desktop version, first box elements alignment fixed

--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -36,7 +36,6 @@ header img {
   background-size: cover;
   width: 100%;
   padding: 130px 0px 130px 0px;
-  margin-bottom: 45px;
   text-align: center;
 }
 
@@ -62,42 +61,41 @@ header img {
   margin: 10px auto;
 }
 
-/*MAIN - CENTRAL SECTION*/
+/*MAIN - CENTRAL SECTION - first-box*/
 
 .central {
   text-align: center;
 }
 .central h2,
 p {
-  text-align: center;
-  margin-inline: 1.5em;
-  padding: 10px;
+  font-size: 11pt;
+  padding: 6px;
 }
 
-.central h2 {
-  font-size: 1.3em;
-  margin-top: 1.3em;
+.first-box {
+  padding: 100px;
 }
+
 /* IMMAGINE CORNICE TONDA*/
 .image-box img {
   border-radius: 50%;
-  width: 450px;
+  width: 350px;
 }
 .image-box {
   display: inline-block;
   text-align: center;
-  margin: 25px;
   width: 45%;
+  margin-right: 20px;
 }
 .text-content {
   display: inline-block;
-  vertical-align: top;
-  padding: 160px 50px 160px 10px;
+  text-align: right;
   width: 45%;
 }
 .text-content h2,
 p {
   text-align: left;
+  margin-right: 14px;
 }
 
 /*REDBOX*/
